--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,29 +1,29 @@
 .contenido-uno-titulo {
     padding-top: 60rem;
-    font-family: "Source Sans 3";
+    font-family: $fuente_primario;
     font-size: 5rem;
     align-self: center;
-    color: #fff;
+    color: $color_primario;
     text-transform: uppercase;
 }
 
 .contenido-uno-hr {
     width: 90%;
     height: 4px;
-    background-color: #fff;
+    background-color: $color_primario;
 }
 
 .contenido-uno-subtitulo {
-    font-family: "Source Sans", sans-serif;
+    font-family: $fuente_primario;
     font-size: 1.5rem;
     align-self: center;
-    color: #fff;
+    color: $color_primario;
     padding: 1rem;
     text-transform: uppercase;
 }
 
 .titulo-h2 {
-    font-family: "Source Sans 3", cursive;
+    font-family: $fuente_primario, cursive;
     font-size: 4rem;
     color: #000;
     width: 100%;
