--- a/scss/layouts/_inscripciones.scss
+++ b/scss/layouts/_inscripciones.scss
@@ -1,5 +1,5 @@
 .main-inscripciones {
-    background-color: #eee;
+    background-color: $color_primario;
 }
 
 .contenido-uno-inscripciones {
@@ -25,6 +25,12 @@
     width: 100%;
     grid-template-areas: "info imagen";
     padding: 50px;
+
+    img {
+        grid-area: imagen;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .contenido-dos-inscripciones1 {
@@ -34,15 +40,9 @@
     align-items: center;
     text-align: center;
     padding: 1.875rem;
-}
 
-.contenido-dos-inscripciones1 p {
-    padding-top: 50px;
-    font-size: 25px;
-}
-
-.contenido-dos-inscripciones-imagen {
-    grid-area: imagen;
-    justify-content: center;
-    align-items: center;
+    p {
+        padding-top: 50px;
+        font-size: 25px;
+    }
 }
